Added sorting by rental price when searching by price, sorting by tool name case-insensitive when displaying the tool.